fix tests for timeline in events miw-upm/goa#59